[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = ""
authors = ["juliompontes <machadopontes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
ratelimit = "^2.2.1"
backoff = "^1.11.1"
boto3 = "^1.21.41"
schedule = "^1.1.0"
pynamodb = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
